# neurarch-arch-bench

./: .gitignore  ANTI_GAMING.md  LABS.md  LICENSE  README.md  RESULTS.md  ROBUSTNESS.md  VERIFICATION.md  amp-claude-tower.json  amp-claude-v3.json  amp-deepseek-v3.json  amp-full.json  amp-grok-v3.json  amp-grok.json  amplify.mjs  arch-reasoning-claude.card.md  arch-reasoning-claude.stats.json  arch-reasoning-grok-union.stats.json  arch-reasoning-grok.card.md  arch-reasoning-grok.stats.json  arena.mjs  bench.mjs  bench.test.ts  calib-claude-core-v2.json  calib-claude-frontier.json  calib-grok-frontier.json  calibrate.mjs  card.mjs  day_zero.mjs  edge.test.ts  env-server.mjs  frontier.test.ts  generate-edge.mjs  generate-frontier.mjs  generate.mjs  generate.test.ts  grok-4.20-blatant.txt  grounding_results.csv  lb-claude-curated-v2.json  lb-claude-grok-curated.json  (+21 more)
environments/neurarch_arch_design/: README.md  neurarch_arch_design.py  pyproject.toml
environments/neurarch_arch_design_v1/: README.md  pyproject.toml  test_v1_smoke.py
environments/neurarch_arch_design_v1/neurarch_arch_design_v1/: __init__.py  taskset.py
paper/: PAPER.md  REVIEWER_SELF_ASSESSMENT.md  VERSIONS.md  paper.tex
paper-iclr2026/: README.md  paper.aux  paper.out  paper.tex
paper-neurips/: README.md  paper.aux  paper.tex
training/: DATASET_CARD.md  GRPO_RUN_GUIDE.md  README.md  REASONING_DATASET_CARD.md  analyze_grounding.py  build_sft_dataset.mjs  colab_grpo.ipynb  colab_grpo_full.ipynb  combine_traces.mjs  dump_grounding_set.mjs  grounding.py  grounding_at_scale.py  reasoning_traces.mjs  (+11 more)
(+1 files in other folders)
