[project]
name = "neurarch-arch-design"
description = "Design neural-network architectures as structured graph edits, graded by a deterministic verifier (no human judge, no LLM judge, no GPU). Procedurally generated, contamination-resistant task splits."
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["neurarch_arch_design.py", "pyproject.toml", "README.md"]

[tool.verifiers.eval]
num_examples = 20
rollouts_per_example = 4
