[project]
name = "neurarch-arch-design-v1"
version = "0.2.0"
description = "Design neural-network architectures as structured graph edits, graded by a deterministic verifier (no human judge, no LLM judge, no GPU). Procedurally generated, contamination-resistant splits. verifiers v1-native."
requires-python = ">=3.10"
dependencies = ["verifiers>=0.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neurarch_arch_design_v1"]
